Fix hidden popover box-shadow overlaying scrollbar

--- a/assets/css/elements.css
+++ b/assets/css/elements.css
@@ -139,7 +139,7 @@
 
 .popover {
   position: absolute;
-  right: -530px;
+  right: -550px;
   top: 0;
   bottom: 0;
   width: 530px;
